# rag_cleaning

./: .gitignore  INTEGRATION.md  README.md  pyproject.toml
config/: settings.yaml
docker/: Dockerfile  docker-compose.yml
proto/: cleaning.proto
scripts/: compile_proto.py
src/: main.py
src/cleaning/: basic_cleaner.py  content_filter.py  quality_validator.py  sensitive_masker.py  structure_fixer.py
src/common/: config_loader.py
src/common/constant/: kafka_constants.py
src/common/enums/: status_enums.py
src/common/exception/: exceptions.py
src/common/models/: document.py
src/common/result/: result.py
src/common/util/: logger.py  utils.py
src/communication/grpc_server/: cleaning_service.py
src/communication/kafka_consumer/: task_consumer.py
src/communication/kafka_producer/: event_producer.py
src/elements/: __init__.py  base.py  cache_manager.py  formula_processor.py  image_processor.py  registry.py  table_processor.py
src/elements/processors/: __init__.py  chemical_equation_processor.py  circuit_diagram_processor.py  formula_processor.py  image_processor.py  table_processor.py
src/infrastructure/llm/: llm_adapter.py
src/output/: markdown_generator.py  metadata_generator.py
src/pipeline/: __init__.py  pipeline.py
src/preprocessing/: base.py  docx_preprocessor.py  md_preprocessor.py  ocr_preprocessor.py  pdf_preprocessor.py  pptx_preprocessor.py  txt_preprocessor.py  xlsx_preprocessor.py
src/scheduling/: dlq_manager.py  format_router.py  retry_scheduler.py  state_machine.py
tests/integration/: test_full_pipeline.py
(+2 files in other folders)
